--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,24 +1,24 @@
 :root {
-	--ion-color-primary: #555469;
-	--ion-color-primary-rgb: 85,84,105;
+	--ion-color-primary: #3880ff;
+	--ion-color-primary-rgb: 56,128,255;
 	--ion-color-primary-contrast: #ffffff;
 	--ion-color-primary-contrast-rgb: 255,255,255;
-	--ion-color-primary-shade: #4b4a5c;
-	--ion-color-primary-tint: #666578;
+	--ion-color-primary-shade: #3171e0;
+	--ion-color-primary-tint: #4c8dff;
 
-	--ion-color-secondary: #9193b1;
-	--ion-color-secondary-rgb: 145,147,177;
-	--ion-color-secondary-contrast: #000000;
-	--ion-color-secondary-contrast-rgb: 0,0,0;
-	--ion-color-secondary-shade: #80819c;
-	--ion-color-secondary-tint: #9c9eb9;
+	--ion-color-secondary: #5260ff;
+	--ion-color-secondary-rgb: 82,96,255;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #4854e0;
+	--ion-color-secondary-tint: #6370ff;
 
-	--ion-color-tertiary: #9193b1;
-	--ion-color-tertiary-rgb: 145,147,177;
-	--ion-color-tertiary-contrast: #000000;
-	--ion-color-tertiary-contrast-rgb: 0,0,0;
-	--ion-color-tertiary-shade: #80819c;
-	--ion-color-tertiary-tint: #9c9eb9;
+	--ion-color-tertiary: #5260ff;
+	--ion-color-tertiary-rgb: 82,96,255;
+	--ion-color-tertiary-contrast: #ffffff;
+	--ion-color-tertiary-contrast-rgb: 255,255,255;
+	--ion-color-tertiary-shade: #4854e0;
+	--ion-color-tertiary-tint: #6370ff;
 
 	--ion-color-success: #2dd36f;
 	--ion-color-success-rgb: 45,211,111;
